--- a/GameEngine.cbp
+++ b/GameEngine.cbp
@@ -13,7 +13,21 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-lglfw -lGLU -lGL -lglut" />
+					<Add directory="/home/nathan/dev/GameEngine/" />
 				</Compiler>
+				<Linker>
+					<Add option="-lSDL2" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libX11.so" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libSDL2.so" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libSDL2.a" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libglapi.so.0" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libGL.so" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libGLU.a" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libGLU.so" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libglut.so" />
+					<Add library="../../../../usr/lib/x86_64-linux-gnu/libglut.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/GameEngine" prefix_auto="1" extension_auto="1" />
@@ -35,9 +49,11 @@
 			<Add library="GL" />
 			<Add library="X11" />
 		</Linker>
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="entity.cpp" />
+		<Unit filename="game.cpp" />
+		<Unit filename="main.cpp" />
+		<Unit filename="stb_image.cpp" />
+		<Unit filename="stb_image.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
